# jose

./: .gitignore  .packit.yaml  .travis.docker  .travis.install  .travis.script  .travis.selections  .travis.test  .travis.yml  BSD-MANIFEST  Makefile.am  README.md  bin.c  bin.h  bin_t.c  configure.ac  jose-openssl.pc.in  jose-zlib.pc.in  jose.h  jose.pc.in  jose.spec  json.c  jwk.c  jwk_ec.c  jwk_rsa.c  key.c  key_t.c  meson.build  meson_options.txt
cmd/: Makefile.am  alg.c  dec.c  enc.c  exc.c  fmt.c  gen.c  hdr.c  jose.c  jose.h  meson.build  pbkdf2.c  pub.c  sig.c  sup.c  thp.c  use.c  ver.c
cmd/b64/: b64.h  dec.c  enc.c
cmd/jwe/: dec.c  enc.c  fmt.c  jwe.h  pwd.h
cmd/jwk/: eql.c  exc.c  gen.c  jwk.h  pub.c  thp.c  use.c
cmd/jws/: fmt.c  jws.h  sig.c  ver.c
doc/: Makefile.am  meson.build
doc/doxygen/: Doxyfile
doc/doxygen/html/: annotated.html  b64_8h_source.html  cfg_8h_source.html  classes.html  dir_f2bd36b8a3f3d476e48bdb5015c9fdfb.html  functions.html  functions_vars.html  group__jose__b64.html  group__jose__cfg.html  group__jose__io.html  group__jose__jwe.html  group__jose__jwk.html  group__jose__jws.html  index.html  io_8h_source.html  jose_8h_source.html  jwe_8h_source.html  jwk_8h_source.html  jws_8h_source.html  jwt_8h_source.html  menudata.js  modules.html  openssl_8h_source.html  structjose__io__t.html
doc/man/: jose-alg.1  jose-alg.1.adoc  jose-b64-dec.1  jose-b64-dec.1.adoc  jose-b64-enc.1  jose-b64-enc.1.adoc  jose-fmt.1  jose-fmt.1.adoc  jose-jwe-dec.1  jose-jwe-dec.1.adoc  jose-jwe-enc.1  jose-jwe-enc.1.adoc  jose-jwe-fmt.1  jose-jwe-fmt.1.adoc  jose-jwk-eql.1  jose-jwk-eql.1.adoc  jose-jwk-exc.1  jose-jwk-exc.1.adoc  jose-jwk-gen.1  jose-jwk-gen.1.adoc  jose-jwk-pub.1  jose-jwk-pub.1.adoc  jose-jwk-thp.1  jose-jwk-thp.1.adoc  jose-jwk-use.1  jose-jwk-use.1.adoc  jose-jws-fmt.1  jose-jws-fmt.1.adoc  jose-jws-sig.1  jose-jws-sig.1.adoc  jose-jws-ver.1  jose-jws-ver.1.adoc  jose.1  jose.1.adoc  meson.build
doc/ronn/: jose-alg.1  jose-alg.1.html  jose-alg.1.md  jose-b64-dec.1  jose-b64-dec.1.html  jose-b64-dec.1.md  jose-b64-enc.1  jose-b64-enc.1.html  jose-b64-enc.1.md  jose-fmt.1  jose-fmt.1.html  jose-fmt.1.md  jose-jwe-dec.1  jose-jwe-dec.1.html  jose-jwe-dec.1.md  jose-jwe-enc.1  jose-jwe-enc.1.html  jose-jwe-enc.1.md  jose-jwe-fmt.1  jose-jwe-fmt.1.html  jose-jwe-fmt.1.md  jose-jwk-eql.1  jose-jwk-eql.1.html  jose-jwk-eql.1.md  jose-jwk-exc.1  jose-jwk-exc.1.html  jose-jwk-exc.1.md  jose-jwk-gen.1  jose-jwk-gen.1.html  jose-jwk-gen.1.md  jose-jwk-pub.1  jose-jwk-pub.1.html  jose-jwk-pub.1.md  jose-jwk-thp.1  jose-jwk-thp.1.html  jose-jwk-thp.1.md  jose-jwk-use.1  jose-jwk-use.1.html  jose-jwk-use.1.md  jose-jws-fmt.1  (+14 more)
include/jose/: b64.h  cfg.h  jose.h.in  jwe.h  jwk.h  jws.h  meson.build
jose/: Makefile.am  b64.h  buf.h  cfg.h  hooks.h  io.h  jose.h  jose.h.in  jose_log.h  jwe.h  jwk.h  jws.h  meson.build  openssl.h  zlib.h
lib/: Makefile.am  b64.c  b64_conv.c  buf.c  cfg.c  dir.c  hooks.c  hooks.h  hsh.c  hsh.h  io.c  jose.c  jwe.c  jwk.c  jws.c  libjose.map  meson.build  misc.c  misc.h
lib/openssl/: aescbch.c  aesgcm.c  aesgcmkw.c  aeskw.c  compat.c  compat.h  dir.c  ec.c  ecdh.c  ecdhes.c  ecdsa.c  ecmr.c  hash.c  hmac.c  jwk.c  libressl_evp.c  libressl_evp.h  lock.c  misc.c  misc.h  oct.c  pbes2.c  rsa.c  rsaes.c  rsassa.c  sha.c
lib/zlib/: deflate.c
src/: Makefile.am  aescbch.c  aescbch.h  aesgcm.c  aesgcm.h  aeskw.c  aeskw.h  b64.c  b64.h  b64_t.c  bn.c  bn.h  buf.c  buf.h  cek.c  cek.h  cek_int.h  conv.c  conv.h  core.c  core.h  ecdsa.c  ecdsa.h  hash.c  hash.h  hmac.c  hmac.h  hmac_t.c  hook.c  hook.h  jose.c  jose.h  json.c  json.h  jtbl.h  jwe.c  jwe.h  jwe_dec.c  jwe_decrypt.c  jwe_enc.c  (+30 more)
src/hooks/: aescbch.c  aesgcm.c  aeskw.c  deflate.c  ecdsa.c  hmac.c  rsaes.c  rsassa.c
src/jose/: Makefile.am  dec.c  decrypt.c  enc.c  encrypt.c  gen.c  generate.c  jose.c  jose.h  jose_t  pub.c  publicize.c  sig.c  sign.c  ver.c  verify.c
src/openssl/: aescbch.c  aesgcm.c  aeskw.c  ec.c  ecdsa.c  hmac.c  jwk.c  misc.c  oct.c  rsa.c  rsaes.c  rsassa.c
src/tests/: Makefile.am  b64.c  jose  jtbl.c  jwe.c  jwk.c  jwkset.c  jws.c  vect.c
src/tests/vectors/: rfc7515_A.6.jwkset  rfc7517_A.1.jwkset  rfc7517_A.2.jwkset  rfc7517_B.jwk  rfc7520_3.4.jwk  rfc7520_4.1.jwsg  rfc7520_4.3.jwsg  (+22 more)
src/vectors/: rfc7517_A.3.jwkset  rfc7520_3.1.jwk  rfc7520_3.3.jwk  rfc7520_3.5.jwk  rfc7520_3.6.jwk  rfc7520_4.1.jwsc  rfc7520_4.1.jwsf  rfc7520_4.2.jwk  rfc7520_4.2.jwsc  rfc7520_4.2.jwsg  rfc7520_4.3.jwk  rfc7520_4.3.jwsf  rfc7520_4.5.jwsf  rfc7520_4.5.jwsg  rfc7520_4.6.jwsf  rfc7520_4.7.jwk  rfc7520_5.1.cek  rfc7520_5.1.jwef  rfc7520_5.2.cek  rfc7520_5.2.jwk  rfc7520_5.7.cek  rfc7520_5.7.jwec  rfc7520_5.7.jweg
src/zlib/: deflate.c
tests/: Makefile.am  alg_comp.c  alg_encr.c  alg_hash.c  alg_sign.c  alg_wrap.c  api_b64.c  api_jwe.c  api_jws.c  api_mem.c  b64.c  jose  jose-alg  jose-b64-dec  jose-b64-enc  jose-fmt  jose-jwe-dec  jose-jwe-enc  jose-jwe-fmt  jose-jwk-eql  jose-jwk-exc  jose-jwk-gen  jose-jwk-pub  jose-jwk-thp  jose-jwk-use  jose-jws-fmt  jose-jws-sig  jose-jws-ver  jose-use  jwe.c  jwk.c  jws.c  meson.build  rfc7515_A  rfc7520_4  rfc7520_5  rfc7638  rsa_oaep.c  vect.c  vect.h
tests/cve-2023-50967/: cve-2023-50967.jwe  cve-2023-50967.jwk
tests/issue-75/: issue-75.c  meson.build  rsa512.pem
tests/vectors/: rfc7515_A.6.1.jwk  rfc7515_A.6.2.jwk  rfc7515_A.7.jwk  rfc7520_3.2.jwk  rfc7520_4.2.jwsf  rfc7520_4.3.jwsc  rfc7520_4.4.jwsf  rfc7520_4.5.jwsc  rfc7520_4.5.payl  rfc7520_4.6.jwsg  rfc7520_4.7.jwsg  rfc7520_4.8.jwkset  rfc7520_4.8.jwsg  rfc7520_5.1.jweg  rfc7520_5.1.jwk  rfc7520_5.10.jwef  rfc7520_5.11.cek  rfc7520_5.11.jwef  rfc7520_5.11.jweg  rfc7520_5.11.pt  rfc7520_5.12.cek  rfc7520_5.12.jwef  rfc7520_5.12.jweg  rfc7520_5.13.1.jwk  rfc7520_5.13.2.jwk  rfc7520_5.13.3.jwk  rfc7520_5.13.jweg  rfc7520_5.3.cek  rfc7520_5.3.jwec  rfc7520_5.3.jwef  rfc7520_5.3.jweg  rfc7520_5.3.jwk  rfc7520_5.3.pt  rfc7520_5.4.cek  rfc7520_5.4.jwec  rfc7520_5.4.jwef  rfc7520_5.4.jweg  rfc7520_5.4.jwk  rfc7520_5.5.jwec  rfc7520_5.5.jweg  (+13 more)
(+35 files in other folders)
