man1_MANS = \
    ronn/jose.1 \
    ronn/jose-alg.1 \
    ronn/jose-b64-dec.1 \
    ronn/jose-b64-enc.1 \
    ronn/jose-jwe-dec.1 \
    ronn/jose-jwe-enc.1 \
    ronn/jose-jwe-fmt.1 \
    ronn/jose-jwk-exc.1 \
    ronn/jose-jwk-gen.1 \
    ronn/jose-jwk-pub.1 \
    ronn/jose-jwk-thp.1 \
    ronn/jose-jwk-use.1 \
    ronn/jose-jws-fmt.1 \
    ronn/jose-jws-sig.1 \
    ronn/jose-jws-ver.1

man3_MANS = \
    doxygen/man/man3/jose_b64.3 \
    doxygen/man/man3/jose_jwk.3 \
    doxygen/man/man3/jose_jws.3 \
    doxygen/man/man3/jose_cfg.3 \
    doxygen/man/man3/jose_jwe.3 \
    doxygen/man/man3/jose_io_t.3 \
    doxygen/man/man3/jose_io.3

EXTRA_DIST = $(man1_MANS) $(man3_MANS)
