install_man(
  'man/jose.1', 
  'man/jose-alg.1', 
  'man/jose-fmt.1', 
  'man/jose-b64-dec.1', 
  'man/jose-b64-enc.1', 
  'man/jose-jwe-dec.1', 
  'man/jose-jwe-enc.1', 
  'man/jose-jwe-fmt.1', 
  'man/jose-jwk-exc.1', 
  'man/jose-jwk-gen.1', 
  'man/jose-jwk-pub.1', 
  'man/jose-jwk-thp.1', 
  'man/jose-jwk-use.1', 
  'man/jose-jws-fmt.1', 
  'man/jose-jws-sig.1', 
  'man/jose-jws-ver.1',
  'doxygen/man/man3/jose_b64.3',
  'doxygen/man/man3/jose_jwk.3',
  'doxygen/man/man3/jose_jws.3',
  'doxygen/man/man3/jose_cfg.3',
  'doxygen/man/man3/jose_jwe.3',
  'doxygen/man/man3/jose_io_t.3',
  'doxygen/man/man3/jose_io.3',
)
