mans += join_paths(meson.current_source_dir(), 'jose.1')
mans += join_paths(meson.current_source_dir(), 'jose-alg.1')
mans += join_paths(meson.current_source_dir(), 'jose-b64-dec.1')
mans += join_paths(meson.current_source_dir(), 'jose-b64-enc.1')
mans += join_paths(meson.current_source_dir(), 'jose-fmt.1')
mans += join_paths(meson.current_source_dir(), 'jose-jwe-dec.1')
mans += join_paths(meson.current_source_dir(), 'jose-jwe-enc.1')
mans += join_paths(meson.current_source_dir(), 'jose-jwe-fmt.1')
mans += join_paths(meson.current_source_dir(), 'jose-jwk-eql.1')
mans += join_paths(meson.current_source_dir(), 'jose-jwk-exc.1')
mans += join_paths(meson.current_source_dir(), 'jose-jwk-gen.1')
mans += join_paths(meson.current_source_dir(), 'jose-jwk-pub.1')
mans += join_paths(meson.current_source_dir(), 'jose-jwk-thp.1')
mans += join_paths(meson.current_source_dir(), 'jose-jwk-use.1')
mans += join_paths(meson.current_source_dir(), 'jose-jws-fmt.1')
mans += join_paths(meson.current_source_dir(), 'jose-jws-sig.1')
mans += join_paths(meson.current_source_dir(), 'jose-jws-ver.1')
